--- a/Backend/views/deliveryPartners/show.ejs
+++ b/Backend/views/deliveryPartners/show.ejs
@@ -13,7 +13,7 @@
 <body>
     <table>
             <tr>
-                <td><%= offer %></td>
+                <td><%= partner %></td>
             </tr>
     </table>
 </body>
