--- a/vh_frontend/src/dashboard/Header.css
+++ b/vh_frontend/src/dashboard/Header.css
@@ -1,12 +1,12 @@
 .header-container {
     display: flex;
     align-items: center;
-    background-color: #1d4163; /* Matches your image background */
+    background-color: #518596; /* Matches your image background */
     padding: 10px;
     height: 50px;
     width:100%;
     justify-content:space-between;
-    margin-left: 5px;
+    margin-left: 40px;
     border-radius: 15px;
     
   }
