--- a/vh_frontend/src/dashboard/Navbar.css
+++ b/vh_frontend/src/dashboard/Navbar.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    position: fixed;
     border-radius: 0px 15px 15px 0px;
 }
 .sidebar-button {
@@ -37,10 +38,7 @@
     color: white;
     text-decoration: none;
   }
-.navbarside
-{
-  margin-top: 150px;
-}
+
   
 
  
