--- a/vh_frontend/src/Stats/statsgrid.css
+++ b/vh_frontend/src/Stats/statsgrid.css
@@ -1,6 +1,6 @@
 .stats1{
       background-color: #518596;
-      height: 450px; /* Adjust height as needed */
+      height: 350px; /* Adjust height as needed */
       width: 390px;  /* Adjust width as needed */
       display: flex;
       justify-content: space-between;
@@ -11,6 +11,7 @@
       color: white;
       font-weight: bold;
       border-radius: 5px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .graphss{
       display: flex;
@@ -25,7 +26,6 @@
 
 }
 
-  
 
 
     
