--- a/vh_frontend/src/dashboard/Dashboard.css
+++ b/vh_frontend/src/dashboard/Dashboard.css
@@ -33,4 +33,10 @@ header {
 
 .dashboard-grid {
   margin-top: 20px;
+  z-index: 2;
+}
+
+
+.tilt-card {
+  z-index: -2; /* Higher than the sidebar */
 }
