--- a/vh_frontend/src/dashboard/DashboardGrid.css
+++ b/vh_frontend/src/dashboard/DashboardGrid.css
@@ -9,6 +9,7 @@
 }
 
 .grid-item {
+    overflow: hidden;
   background-color: #518596;
   color: white;
   display: flex;
@@ -55,4 +56,11 @@
   transform: scale(1.05);
   transition: transform 0.3s ease;
   background-color: #457787;
+}
+.backpng{
+    height: 100px;
+
+}
+.backpng1{
+    height: 150px;
 }
