--- a/vh_frontend/src/redeem/redeem.css
+++ b/vh_frontend/src/redeem/redeem.css
@@ -10,7 +10,7 @@
   
   .grid-items {
       overflow: hidden;
-    background-color: #518596;
+    background-color: #1D1F2E;
     color: white;
     display: flex;
     justify-content: center;
@@ -26,7 +26,7 @@
   }
   .grid-itemss {
     overflow: hidden;
-  background-color: #518596;
+  background-color: #1D1F2E;
   color: white;
   border-radius: 10px;
   font-size: 16px;
@@ -64,7 +64,7 @@
   .grid-items:hover {
     transform: scale(1.05);
     transition: transform 0.3s ease;
-    background-color: #457787;
+    background-color: #1D1F2E;;
   }
   .backpng{
       height: 100px;
