--- a/vh_frontend/src/Stats/statsgrid.css
+++ b/vh_frontend/src/Stats/statsgrid.css
@@ -1,5 +1,5 @@
 .stats1{
-      background-color: #1D1F2E;;
+      background-color: #1d4163;
       height: 350px; /* Adjust height as needed */
       width: 390px;  /* Adjust width as needed */
       display: flex;
