--- a/vh_frontend/src/Teams/Team.css
+++ b/vh_frontend/src/Teams/Team.css
@@ -24,7 +24,7 @@
 }
 
 .Create{
-    background-color: #1f2545;
+    background-color: #1d4163;
     width: 15%;
     height: 63%;
     margin-top: 1%;
@@ -39,7 +39,7 @@
 }
 
 .Team-detail{
-    background-color: #1f2545;
+    background-color: #1d4163;
     margin-top: 1%;
     margin-left: 21%;
     border-radius: 25px;
@@ -60,7 +60,7 @@
 }
 
 .Task-given{
-    background-color: #1f2545;
+    background-color: #1d4163;
     height: 38%;
     width: 77%;
     margin-left: 21%;
