--- a/vh_frontend/src/dashboard/Navbar.css
+++ b/vh_frontend/src/dashboard/Navbar.css
@@ -2,7 +2,7 @@
 {
     height:100vh;
     width:250px;
-    background-color: #1d4163; /* Matches your image background */
+    background-color: #2f3669; /* Matches your image background */
     padding: 20px;
     display: flex;
     flex-direction: column;
