--- a/vh_frontend/src/dashboard/Dashboard.css
+++ b/vh_frontend/src/dashboard/Dashboard.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   height: 100vh;
-  background-color: #1D1F2E;;
+  background-color: #1D1F2E;
+  
 }
 
 nav {
@@ -21,7 +22,7 @@ nav {
   flex: 1;
   display: flex;
   flex-direction: column;
-  background-color: #B5C2CA;
+  background-color: #1D1F2E;;
   padding: 20px;
   height: 100vh; /* Adjust height */
   overflow-y: auto; /* Allow scrolling for inner content */
@@ -34,6 +35,7 @@ header {
 .dashboard-grid {
   margin-top: 20px;
   z-index: 2;
+  background-color: #1D1F2E;
 }
 
 
