--- a/vh_frontend/src/dashboard/Header.css
+++ b/vh_frontend/src/dashboard/Header.css
@@ -1,7 +1,7 @@
 .header-container {
     display: flex;
     align-items: center;
-    background-color: #202548; /* Matches your image background */
+    background-color: #2f3669; /* Matches your image background */
     padding: 10px;
     height: 50px;
     width:94%;
