--- a/vh_frontend/src/redeem/redeem.css
+++ b/vh_frontend/src/redeem/redeem.css
@@ -5,12 +5,12 @@
     grid-template-rows: 100px 100px 200px 200px;
     gap: 20px;
     padding: 20px;
-    background-color: #B5C2CA;
+    background-color: #1D1F2E;;
   }
   
   .grid-items {
       overflow: hidden;
-    background-color: #1D1F2E;
+    background-color: #1d4163;
     color: white;
     display: flex;
     justify-content: center;
@@ -26,7 +26,7 @@
   }
   .grid-itemss {
     overflow: hidden;
-  background-color: #1D1F2E;
+  background-color: #1d4163;
   color: white;
   border-radius: 10px;
   font-size: 16px;
@@ -64,7 +64,7 @@
   .grid-items:hover {
     transform: scale(1.05);
     transition: transform 0.3s ease;
-    background-color: #1D1F2E;;
+    background-color: #2c325f;
   }
   .backpng{
       height: 100px;
